<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cristian_sedano.calculator.Calculator"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <EditText
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/result"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/newNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newNumber"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/Result"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/displayOperation"
        android:layout_width="46dp"
        android:layout_height="19dp"
        tools:ignore="RtlHardcoded"
        app:layout_constraintRight_toLeftOf="@+id/button7"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_1"
        app:layout_constraintLeft_toLeftOf="@+id/button4"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_2"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_3"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_4"
        app:layout_constraintLeft_toLeftOf="@+id/button7"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_5"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_6"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_7"
        app:layout_constraintLeft_toLeftOf="@+id/newNumber"
        app:layout_constraintTop_toBottomOf="@+id/newNumber"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_8"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_9"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_0"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/buttonDot"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_Divide"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/button9"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9" />

    <Button
        android:id="@+id/buttonMulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_Multy"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/button6"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6" />

    <Button
        android:id="@+id/buttonSubstract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_Substract"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_Point"
        app:layout_constraintLeft_toLeftOf="@+id/button1"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_Equal"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/button0"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button0" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/btn_Add"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/buttonEqual"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEqual" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:minWidth="48dp"
        android:text="@string/btn_Clear"
        app:layout_constraintLeft_toLeftOf="@+id/buttonDot"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonNeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:text="@string/btn_Neg"
        tools:ignore="RtlHardcoded"
        app:layout_constraintLeft_toRightOf="@+id/buttonClear"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonClear" />
</android.support.constraint.ConstraintLayout>
